feat: Add backup feature
